Add multiple recording
+ added multiple recording